--- a/src/app/components/drawer/DrawerRail.module.css
+++ b/src/app/components/drawer/DrawerRail.module.css
@@ -9,7 +9,7 @@
   padding: 15px 0;
   text-align: center;
   width: var(--drawerRailWidth);
-  z-index: var(--z-index-3);
+  z-index: var(--z-index-5);
 
   .railIconLink {
     background-color: var(--color-beige-86);
